[package]
name = "amnesia_bgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
ipnet = "2.9.0"
octets = "0.3.0"
parking_lot = "0.12.1"
prefix-trie = "0.3.0"
ringbuf = "0.3.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
